--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-center text-red-700 underline text-7xl">hello</h1>
+    <h1 class="text-center text-blue-950 underline text-7xl">hello</h1>
+    <h1 class="text-center text-blue-950 underline text-2xl">hello</h1>
 </body>
 </html>
